--- a/Leaflet-Part-1/static/css/style.css
+++ b/Leaflet-Part-1/static/css/style.css
@@ -8,3 +8,17 @@ body,
 html {
   height: 100%;
 }
+
+.legend {
+  color: #555;
+  padding: 6px 8px;
+  background: white;
+}
+
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.9;
+}
